--- a/es-dms-site/src/main/webapp/views/new-user.html
+++ b/es-dms-site/src/main/webapp/views/new-user.html
@@ -1,14 +1,14 @@
 <div class="modal-header">
-    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">x</button>
     <h3>New user</h3>
 </div>
 <div class="modal-body">
     <form>
     <fieldset>
         <label>Name</label>
-        <input type="text" placeholder="Type something…" autofocus="autofocus">
+        <input type="text" placeholder="Type something..." autofocus="autofocus">
         <label>City</label>
-        <input type="text" placeholder="Type something…">
+        <input type="text" placeholder="Type something...">
         <label>Birth date</label>
         <div class="control-group input-append">
             <input type="text" data-date-format="mm/dd/yy" class="datepicker" bs-datepicker="" />
