Update authentication implementation

--- a/es-dms-site/src/main/webapp/views/view3.html
+++ b/es-dms-site/src/main/webapp/views/view3.html
@@ -1,5 +1,7 @@
 <div class="container" data-ng-controller="modalCtrl">
     <br />
+    <button type="button" class="btn btn-primary" bs-modal="'views/login.html'">Login</button>
+    <br />
     <button type="button" class="btn btn-large btn-primary" bs-modal="'views/new-user.html'">New User</button>
     <br />
     <button type="button" class="btn btn-primary" bs-modal="'views/new-document.html'">New Document</button>
