--- a/es-dms-site/src/main/webapp/views/login.html
+++ b/es-dms-site/src/main/webapp/views/login.html
@@ -1,6 +1,7 @@
 <div class="container" id="loginbox">
 	<div id="login-inner" data-ng-controller="loginController">
-		<form ng-submit="submit()">
+		<!-- form action="api/auth/login" enctype="multipart/form-data" ng-submit="submit()" -->
+		<form action="api/auth/login" enctype="multipart/form-data">
 			<label>Username</label> 
 			<br /> 
 			<input type="text" class="login-inp" ng-model="username" />
@@ -8,7 +9,7 @@
 			<br />
 			<input type="password" class="login-inp" ng-model="password" /> 
 			<label>Login</label>
-			<input type="submit" class="btn btn-primary" />
+			<input type="submit" class="btn btn-success" value="Login" />
 		</form>
 	</div>
 	<div class="clear"></div>
