--- a/es-dms-site/src/main/webapp/views/search-view.html
+++ b/es-dms-site/src/main/webapp/views/search-view.html
@@ -1,8 +1,9 @@
 		<div class="container">
 			<h2>Documents Search</h2>
-			Search criteria:<br />
-            <input type="text" data-ng-model="criteria" />
-            <button type="button" class="btn btn-primary" data-ng-click="search()">Search</button>
+			<form class="form-search">
+            	<input type="text" data-ng-model="criteria" />
+            	<button type="button" class="btn btn-primary" data-ng-click="search()">Search</button>
+            </form>
 			<br/>
 			<ul>
 				<li data-ng-repeat="document in documents">{{ document.id }} - {{ document.file.name }}
