--- a/es-dms-site/src/main/webapp/views/new-document.html
+++ b/es-dms-site/src/main/webapp/views/new-document.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-	<button type="button" class="close" data-dismiss="modal" aria-hidden="true" ng-click="close()">x</button>
+	<button type="button" class="close" data-dismiss="modal" aria-hidden="true" ng-click="close()">&times;</button>
 	<h4>New document</h4>
 </div>
 <div class="modal-body">
