--- a/es-dms-site/src/main/webapp/views/login.html
+++ b/es-dms-site/src/main/webapp/views/login.html
@@ -1,23 +1,25 @@
-<div class="modal-header">
-	<button type="button" class="close" data-dismiss="modal" aria-hidden="true" ng-click="close()">&times;</button>
-	<h3>Please sign in</h3>
-</div>
-<div class="modal-body">
-	<div id="loginbox"data-ng-controller="loginController">
-		<!-- form action="api/auth/login" enctype="multipart/form-data" method="post" -->
-		<form>
-			<fieldset>
-				<label>Username</label> 
-				<input type="text" name="username" data-ng-model="username" placeholder="Username" autofocus="autofocus" required />
-				<label>Password</label>
-				<input type="password" name="password" data-ng-model="password" placeholder="Password" required /> 
-				<label class="checkbox">
-          			<input type="checkbox" value="rememberMe" /> Remember me
-        		</label>
-				<input type="submit" class="btn btn-success" value="Login" ng-click="login()" />
-			</fieldset>
-		</form>
+<div modal="shouldBeOpen" data-ng-controller="loginController">
+	<div class="modal-header">
+		<button type="button" class="close" data-dismiss="modal" aria-hidden="true" ng-click="close()">&times;</button>
+		<h3>Please sign in</h3>
 	</div>
-</div>
-<div class="modal-footer">
+	<div class="modal-body">
+		<div id="loginbox">
+			<!-- form action="api/auth/login" enctype="multipart/form-data" method="post" -->
+			<form>
+				<fieldset>
+					<label>Username</label> 
+					<input type="text" name="username" data-ng-model="username" placeholder="Username" autofocus="autofocus" required />
+					<label>Password</label>
+					<input type="password" name="password" data-ng-model="password" placeholder="Password" required /> 
+					<label class="checkbox">
+	          			<input type="checkbox" value="rememberMe" /> Remember me
+	        		</label>
+					<input type="submit" class="btn btn-success" value="Login" ng-click="login()" />
+				</fieldset>
+			</form>
+		</div>
+	</div>
+	<div class="modal-footer">
+	</div>
 </div>
