--- a/es-dms-site/src/main/webapp/views/new-document-1.html
+++ b/es-dms-site/src/main/webapp/views/new-document-1.html
@@ -3,7 +3,7 @@
 	<h3>New document</h3>
 </div>
 <div class="modal-body">
-	<div data-ng-controller="newDocumentCtrl">
+	<div data-ng-controller="newDocumentController">
 		<alert type="alert.type">{{alert.msg}}</alert>
 		<form action="api/documents/upload" enctype="multipart/form-data"
 			data-ng-upload="">
