--- a/es-dms-site/src/main/webapp/views/new-document.html
+++ b/es-dms-site/src/main/webapp/views/new-document.html
@@ -1,36 +1,40 @@
-<div class="modal-header">
-	<button type="button" class="close" data-dismiss="modal" aria-hidden="true" ng-click="close()">&times;</button>
-	<h4>New document</h4>
-</div>
-<div class="modal-body">
-	<div data-ng-controller="newDocumentCtrl">
-		<alert type="alert.type">{{alert.msg}}</alert>
-		<form action="api/documents/upload" enctype="multipart/form-data"
-			ng-upload>
-			<fieldset>
-				<label>Name</label> 
-				<input type="text" name="name"
-					data-ng-model="newDocument.name" placeholder="Type something..."
-					autofocus="autofocus" /> 
-				<label>Date</label>
-				<div class="control-group input-append">
-					<input type="text" name="date" data-ng-model="newDocument.date"
-						data-date-format="mm/dd/yy" class="datepicker" bs-datepicker="" />
-					<button type="button" class="btn" data-toggle="datepicker">
-						<i class="icon-calendar"></i>
-					</button>
-				</div>
-				<label>File</label> 
-				<input type="file" name="file" /> 
-				<input
-					type="submit" class="btn btn-primary" value="Submit"
-					upload-submit="uploadComplete(content, completed)" />
-			</fieldset>
-		</form>
+<div data-ng-controller="newDocumentController">
+	<div class="modal-header">
+		<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+		<h4>New document</h4>
+			<alert data-ng-show="$parent.showAlert" type="alert.type" close="closeAlert()">{{alert.msg}}</alert>
 	</div>
-</div>
-<div class="modal-footer">
-	<button type="button" class="btn" ng-click="close()">Close</button>
-	<button class="btn btn-primary" ng-click="modal.saved=true;close()">
-		Save changes</button>
+	<form class="form-horizontal" action="api/documents/upload" enctype="multipart/form-data"
+				ng-upload>
+		<div class="modal-body">
+			<div class="control-group">
+	       		<label class="control-label">Name:</label>
+	       		<div class="controls">
+	         			<input type="text" ng-model="newDocument.name" placeholder="Name" autofocus="autofocus" />
+	       		</div>
+     		</div>				
+			<div class="control-group">
+        		<label class="control-label">Date:</label>
+        		<div class="controls">
+					<div class="control-group input-append">
+						<input type="text" name="date" data-ng-model="newDocument.date"
+							data-date-format="mm/dd/yy" class="datepicker" bs-datepicker="" />
+						<button type="button" class="btn" data-toggle="datepicker">
+							<i class="icon-calendar"></i>
+						</button>
+					</div>
+        		</div>
+			</div>				
+			<div class="control-group">
+        		<label class="control-label">File:</label>
+        		<div class="controls">
+          			<input type="file" name="file" id="file" /> 
+        		</div>
+      		</div>				
+		</div>
+		<div class="modal-footer">
+			<button type="button" class="btn" data-dismiss="modal">Close</button>
+			<input type="submit" class="btn btn-primary" value="Save" upload-submit="uploadComplete(content, completed)" />
+		</div>
+	</form>
 </div>
