Shiro integration with es-dms-site

--- a/es-dms-site/src/main/webapp/views/login.html
+++ b/es-dms-site/src/main/webapp/views/login.html
@@ -13,7 +13,7 @@
 					<label>Password</label>
 					<input type="password" name="password" data-ng-model="password" placeholder="Password" required /> 
 					<label class="checkbox">
-	          			<input type="checkbox" value="rememberMe" /> Remember me
+	          			<input type="checkbox" value="rememberMe" data-ng-model="rememberMe" /> Remember me
 	        		</label>
 					<input type="submit" class="btn btn-success" value="Login" ng-click="login()" />
 				</fieldset>
