--- a/es-dms-site/src/main/webapp/views/user-list.html
+++ b/es-dms-site/src/main/webapp/views/user-list.html
@@ -32,7 +32,7 @@
     <br />
 
 	<button class="btn btn-success" ng-click="edit('new')" data-toggle="modal" href="#editModal">
-        <i class="icon-user icon-white"></i>&nbsp;Create New User
+        <i class="icon-user icon-white"></i>&nbsp;New User
 	</button>
 	
 	<div class="modal hide fade" ng-include="'views/edit-user.html'" id="editModal"></div>
