--- a/es-dms-site/src/main/webapp/views/edit-role.html
+++ b/es-dms-site/src/main/webapp/views/edit-role.html
@@ -19,7 +19,15 @@
           			<input type="text" ng-model="role.name" placeholder="Name" />
         		</div>
       		</div>				
-      		
+			<div class="control-group">
+        		<label class="control-label">Permissions:</label>
+        		<div class="controls">
+        			<select multiple="multiple">
+        				<option data-ng-repeat="permission in role.permissions">{{
+            				permission.id }}</option>
+        			</select>
+        		</div>
+      		</div>
 			<div class="control-group">
 				<div class="controls">
       				<label class="checkbox">
