--- a/es-dms-site/src/main/webapp/views/documents/edit-view.html
+++ b/es-dms-site/src/main/webapp/views/documents/edit-view.html
@@ -1,5 +1,5 @@
 <div class="container" data-ng-controller="modalCtrl">
     <br />
     <a href="#newDocument" role="button" class="btn btn-primary" data-toggle="modal">New Document</a>
-    <div id="newDocument" class="modal hide fade" data-ng-include src="'views/new-document.html'">
+    <div id="newDocument" class="modal hide fade" data-ng-include src="'views/documents/new-document.html'">
 </div>
