--- a/es-dms-site/src/main/webapp/views/view3.html
+++ b/es-dms-site/src/main/webapp/views/view3.html
@@ -11,3 +11,12 @@
     <button class='btn' data-ng-click="addAlert()">
         Add Alert</button>
 </div>
+<h2>Example of creating Modal with Twitter Bootstrap</h2>
+<div class="well">
+	<a href="#" id="example" class="btn btn-success" rel="popover" data-content="It's so simple to create a tooltop for my website!" data-original-title="Twitter Bootstrap Popover">hover for popover</a>
+</div>
+<script>
+$(function ()
+{ $("#example").popover();
+});
+</script>
