A new css es-dms-site

--- a/es-dms-site/src/main/webapp/css/es-dms-site.css
+++ b/es-dms-site/src/main/webapp/css/es-dms-site.css
@@ -1,3 +1,21 @@
+/* Main Stylesheet */
+/* Import Bootstrap styles and Responsive styles */
+@import url('bootstrap.css');
+@import url('bootstrap-responsive.css');
+
+/* Add top padding for navbar-top-fixed */
+/*body {
+  padding-top: 60px;
+  padding-bottom: 40px;
+}*/
+
+/* Remove top padding when top navbar goes static in narrow viewports */
+@media (max-width: 979px) {
+  body {
+    padding-top: 0;
+  }
+}
+
 .popover {
 	max-width: 800px;
 	width: auto;
