Additional on authentication

--- a/es-dms-site/src/main/webapp/views/authentication/login.html
+++ b/es-dms-site/src/main/webapp/views/authentication/login.html
@@ -1,4 +1,4 @@
-<div modal="shouldBeOpen" data-ng-controller="loginController">
+<div data-ng-controller="loginController">
 	<div class="modal-header">
 		<button type="button" class="close" data-dismiss="modal" aria-hidden="true" ng-click="close()">&times;</button>
 		<h3>Please sign in</h3>
