--- a/es-dms-site/src/main/webapp/views/view3.html
+++ b/es-dms-site/src/main/webapp/views/view3.html
@@ -1,6 +1,6 @@
 <div class="container" data-ng-controller="modalCtrl">
     <div class="btn-group">
-    	<button type="button" class="btn btn-success" data-bs-modal="'views/login.html'">Login</button>
+    	<button type="button" class="btn btn-success" data-bs-modal="'views/authentication/login.html'">Login</button>
     	<button type="button" class="btn btn-inverse" data-bs-modal="'views/edit-user.html'">New User</button>
     	<button type="button" class="btn btn-primary" data-bs-modal="'views/documents/new-document.html'">New Document</button>
     	<button type="button" class="btn" data-ng-click="testHttp401()">Test HTTP 401</button>
