Fix login dialog

--- a/es-dms-site/src/main/webapp/views/authentication/login.html
+++ b/es-dms-site/src/main/webapp/views/authentication/login.html
@@ -15,7 +15,7 @@
 					<label class="checkbox">
 	          			<input type="checkbox" value="rememberMe" data-ng-model="rememberMe" /> Remember me
 	        		</label>
-					<input type="submit" class="btn btn-success" value="Login" ng-click="login()" />
+					<input type="submit" class="btn btn-success" value="Login" data-dismiss="modal" ng-click="login()" />
 				</fieldset>
 			</form>
 		</div>
