--- a/es-dms-site/src/main/webapp/views/view4.html
+++ b/es-dms-site/src/main/webapp/views/view4.html
@@ -1,5 +1,5 @@
 <div ng-controller='CartController'>
-	<h1>Your Order</h1>
+	<h1>Your Documents</h1>
 	<div ng-repeat='item in items'>
 	  <span>{{item.title}}</span>
 	  <input type='text' ng-model='item.quantity'>
@@ -10,6 +10,10 @@
 </div>
 
   <script>
+   
+   var user = "admin";
+   var query = '{ query: { bool: { must: [ { term: { document.attributes.author: "' + user + '" } ] must_not: [ ] should: [ ] } } from: 0 size: 50 sort: [ ] facets: { } }'';
+  
     function CartController($scope) {
       $scope.items = [
         {title: 'Paint pots', quantity: 8, price: 3.95},
