--- a/es-dms-site/src/main/webapp/css/es-dms-site.css
+++ b/es-dms-site/src/main/webapp/css/es-dms-site.css
@@ -20,3 +20,18 @@
 	max-width: 800px;
 	width: auto;
 }
+
+.tags {
+    margin: 10px 0;
+}
+.tags .tag {
+    border-radius: 6px;
+    background-color: #EFEFEF;
+    border: 1px solid #DDD;
+    padding: 5px;
+    margin-right: 10px;
+}
+.tags .tag:hover {
+    color: red;
+    text-decoration: none;
+}
