--- a/es-dms-site/src/main/webapp/views/documents/search-view.html
+++ b/es-dms-site/src/main/webapp/views/documents/search-view.html
@@ -8,14 +8,16 @@
 	<br />
 	<div data-ng-show="totalHits">
 		About {{ totalHits }} results - search took {{ elapsedTime }} ms
-		<pagination num-pages="totalPages" current-page="currentPage" max-size="maxPages"></pagination>
+		<div data-ng-show="totalPages > 1">
+			<pagination num-pages="totalPages" current-page="currentPage" max-size="maxPages"></pagination>
+		</div>
 	</div>
 	<alert data-ng-repeat="alert in alerts" type="alert.type"
 		close="closeAlert($index)">{{alert.msg}}</alert>
 	<table class="table table-condensed">
 		<thead>
 			<tr>
-				<th>Id</th>
+				<th>Tags</th>
 				<th>Name</th>
 				<th>Author</th>
 				<th>Status</th>
@@ -24,7 +26,10 @@
 		</thead>
 		<tbody>
 			<tr data-ng-repeat="document in documents">
-				<td>{{ document.id }}</td>
+				<td>
+					<esdms-tagging id="document.id" tags="document.tags" newtag="newtag"></esdms-tagging>
+					<!-- div>{{ document.id }}</div -->
+					</td>
 				<td>
 					<div popover="{{ document.preview }}" popover-placement="bottom"
 						popover-title="Preview" popover-trigger="mouseenter"
