--- a/es-dms-site/src/main/webapp/views/users/search.html
+++ b/es-dms-site/src/main/webapp/views/users/search.html
@@ -22,9 +22,18 @@
     			<td>{{ user.city }}</td>
     			<td>{{ user.disabled }}</td>
     			<td>
-    				<button class="btn btn-primary" data-ng-click="edit(user.id)" data-toggle="modal" href="#editModal">
+					<div class="btn-group">
+						<a class="btn btn-success dropdown-toggle" data-toggle="dropdown"
+							href="#"> Action <span class="caret"></span>
+						</a>
+						<ul class="dropdown-menu">
+							<li><a data-ng-click="edit(user.id)" data-toggle="modal" href="#editModal">Edit</a></li>
+							<li><a data-ng-click="delete(user.id)">Delete</a></li>
+						</ul>
+					</div>
+    				<!-- button class="btn btn-primary" data-ng-click="edit(user.id)" data-toggle="modal" href="#editModal">
     					<i class="icon-pencil icon-white"></i> Edit
-    				</button>
+    				</button -->
     			</td>
     		</tr>
     	</tbody>
@@ -35,6 +44,6 @@
         <i class="icon-user icon-white"></i>&nbsp;New User
 	</button>
 	
-	<div class="modal hide fade" ng-include="'views/edit-user.html'" id="editModal"></div>
+	<div class="modal hide fade" ng-include="'views/users/edit.html'" id="editModal"></div>
 	
 </div>
