--- a/es-dms-site/src/main/webapp/views/roles/search-roles.html
+++ b/es-dms-site/src/main/webapp/views/roles/search-roles.html
@@ -1,8 +1,8 @@
 <div class="container" data-ng-controller="roleController">
     <h2>Roles</h2>
-	<form class="form-search">
+	<form data-ng-submit="search()" class="form-search">
 		<input type="text" data-ng-model="criteria" />
-		<button type="button" class="btn btn-primary" data-ng-click="find()">Search</button>
+		<button type="button" class="btn btn-primary" data-ng-click="search()">Search</button>
 	</form>
 
     <table class="table table-condensed">
@@ -31,6 +31,6 @@
         <i class="icon-user icon-white"></i>&nbsp;New Role
 	</button>
 	
-	<div class="modal hide fade" ng-include="'views/edit-role.html'" id="editModal"></div>
+	<div class="modal hide fade" ng-include="'views/roles/edit-role.html'" id="editModal"></div>
 
 </div>
