--- a/es-dms-site/src/main/webapp/views/users/search-users.html
+++ b/es-dms-site/src/main/webapp/views/users/search-users.html
@@ -1,8 +1,33 @@
+<!--
+  #%L
+  es-dms-site
+  %%
+  Copyright (C) 2013 es-dms
+  %%
+  Copyright 2012-2013 Richard Louapre
+  
+  This file is part of ES-DMS.
+  
+  The current version of ES-DMS is free software: you can redistribute it and/or modify
+  it under the terms of the GNU General Public License as
+  published by the Free Software Foundation, either version 3 of the
+  License, or (at your option) any later version.
+  
+  ES-DMS is distributed in the hope that it will be useful,
+  but WITHOUT ANY WARRANTY; without even the implied warranty of
+  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+  GNU General Public License for more details.
+  
+  You should have received a copy of the GNU General Public
+  License along with this program.  If not, see
+  <http://www.gnu.org/licenses/gpl-3.0.html>.
+  #L%
+  -->
 <div class="container" data-ng-controller="userController">
     <h2>Users</h2>
-	<form class="form-search">
+	<form data-ng-submit="search()" class="form-search">
 		<input type="text" data-ng-model="criteria" />
-		<button type="button" class="btn btn-primary" data-ng-click="find()">Search</button>
+		<button type="button" class="btn btn-primary" data-ng-click="search()">Search</button>
 	</form>
 
     <table class="table table-condensed">
@@ -31,9 +56,6 @@
 							<li><a data-ng-click="delete(user.id)">Delete</a></li>
 						</ul>
 					</div>
-    				<!-- button class="btn btn-primary" data-ng-click="edit(user.id)" data-toggle="modal" href="#editModal">
-    					<i class="icon-pencil icon-white"></i> Edit
-    				</button -->
     			</td>
     		</tr>
     	</tbody>
@@ -44,6 +66,6 @@
         <i class="icon-user icon-white"></i>&nbsp;New User
 	</button>
 	
-	<div class="modal hide fade" ng-include="'views/users/edit.html'" id="editModal"></div>
+	<div class="modal hide fade" ng-include="'views/users/edit-user.html'" id="editModal"></div>
 	
 </div>
