--- a/es-dms-site/src/main/webapp/views/documents/search-documents.html
+++ b/es-dms-site/src/main/webapp/views/documents/search-documents.html
@@ -29,11 +29,28 @@
 	<form data-ng-submit="search()" class="form-search">
 		<input type="text" data-ng-model="criteria" />
 		<button type="button" class="btn btn-primary" data-ng-click="search()">Search</button>
+		<a data-toggle="modal" href="#editOptions">Options</a>
 	</form>
 	<br />
 	<div data-ng-show="totalHits">
-		About {{ totalHits }} results - search took {{ elapsedTime }} ms
+		About {{ totalHits }} results - search took {{ elapsedTime }} ms - items per page : {{ pageSize }}
 	</div>
+	<div class="container-fluid">
+		<div class="row-fluid">
+    		<div class="span2">
+      			<!--Sidebar content-->
+				<div class="well sidebar-nav" data-ng-show="facets">
+					<ul class="nav nav-list">
+						<li class="nav-header">{{ facet }}</li>
+						<li>
+						<a data-ng-click="search(term.term)" data-ng-repeat="term in facets.terms">{{
+			   				term.term }} - ({{ term.count }})</a>
+						</li>
+			   		</ul>
+				</div>
+    		</div>
+    		<div class="span10">
+      			<!--Body content-->
 	<alert data-ng-repeat="alert in alerts" type="alert.type"
 		close="closeAlert($index)">{{alert.msg}}</alert>
 	<table class="table table-condensed">
@@ -85,4 +102,8 @@
 	<div data-ng-show="totalPages > 1">
 		<pagination num-pages="totalPages" current-page="currentPage" max-size="maxPages"></pagination>
 	</div>
+    		</div>
+  		</div>
+	</div>
+	<div class="modal hide fade" ng-include="'views/search/edit-options.html'" id="editOptions"></div>
 </div>
