--- a/es-dms-site/src/main/webapp/views/documents/search-documents.html
+++ b/es-dms-site/src/main/webapp/views/documents/search-documents.html
@@ -42,9 +42,10 @@
 				<div class="well sidebar-nav" data-ng-show="facets">
 					<ul class="nav nav-list">
 						<li class="nav-header">{{ facet }}</li>
-						<li>
-						<a data-ng-click="search(term.term)" data-ng-repeat="term in facets.terms">{{
-			   				term.term }} - ({{ term.count }})</a>
+						<li data-ng-repeat="term in facets.terms">
+						<!--a data-ng-click="search(term.term)" data-ng-repeat="term in facets.terms">{{
+			   				term.term }} - ({{ term.count }})<a-->
+			   				<esdms-facet term="term.term" count="term.count" selected="term.selected"></esdms-facet>
 						</li>
 			   		</ul>
 				</div>
