Implement new tagging with Select2

--- a/es-dms-site/yo/app/views/search/options.html
+++ b/es-dms-site/yo/app/views/search/options.html
@@ -11,7 +11,7 @@
 				<div class="control-group">
 	        		<label class="control-label">Page size: {{ pageSize }}</label>
 	        		<div class="controls">
-	          			<select ng-model="pageSize" ng-options="ps for ps in pageSizeList"></select>
+	          			<select ng-model="options.pageSize" ng-options="ps for ps in pageSizeList"></select>
 	        		</div>
 	      		</div>				
 			</form>
