Add tabs in document details #39
- 3 tabs: details, version (currently disabled), audit.

--- a/es-dms-site/yo/app/views/documents/details.html
+++ b/es-dms-site/yo/app/views/documents/details.html
@@ -4,19 +4,48 @@
 		<h2>Details - {{document.id}}</h2>
 	</div>
 		<div class="modal-body">
-			<div class="control-group">
-				<label class="control-label">Name:</label>
-    		<div class="controls">
-      			<input type="text" ng-model="document.name" />
-    		</div>
-			</div>
-			<div class="control-group">
-				<label class="control-label">Attributes:</label>
-				<ul>
-					<li ng-repeat="(name, value) in document.attributes">{{name}} - {{value}}</li>
-				</ul>
-			</div>
-		</div>
+		  <tabset>
+		    <tab heading="Details">
+					<div class="control-group">
+						<label class="control-label">Name:</label>
+		    		<div class="controls">
+		      			<input type="text" ng-model="document.name" />
+		    		</div>
+					</div>
+					<div class="control-group">
+						<label class="control-label">Attributes:</label>
+						<ul>
+							<li data-ng-repeat="(name, value) in document.attributes">{{name}} - {{value}}</li>
+						</ul>
+					</div>
+					<div class="control-group" data-ng-show="document.tags">
+						<label class="control-label">Tags:</label>
+						<ul>
+							<li data-ng-repeat="tag in document.tags">{{tag}}</li>
+						</ul>
+					</div>
+		    </tab>
+		    <tab heading="Version" disabled="true">Version</tab>
+		    <tab heading="Audit" select="loadAudit()">
+		    	<table class="table table-condensed">
+						<thead>
+							<tr>
+								<th>Event</th>
+								<th>Date</th>
+								<th>Author</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr data-ng-repeat="auditEntry in auditEntries">
+								<td>{{ auditEntry.event }}</td>
+								<td>{{ auditEntry.date | date:'yyyy-MM-dd HH:mm:ss Z' }}</td>
+								<td>{{ auditEntry.user }}</td>
+							</tr>
+						</tbody>
+					</table>
+		    </tab>
+		  </tabset>
+  	</div>
 		<div class="modal-footer">
 			<button type="button" class="btn" data-ng-click="close()">Close</button>
 		</div>
